# ChangeLog for net-misc/openconnect
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/openconnect/ChangeLog,v 1.21 2013/06/23 12:43:56 hasufell Exp $

*openconnect-5.01 (23 Jun 2013)

  23 Jun 2013; Julian Ospald <hasufell@gentoo.org> +openconnect-5.01.ebuild,
  +files/openconnect.init.in-r1, metadata.xml:
  version bump, remove bashisms from initscript

  11 Jun 2013; Tom Wijsman <TomWij@gentoo.org> metadata.xml:
  Changed metadata.xml order per bug-wranglers guidelines, benefits our
  assignment scripts.

  11 Jun 2013; Julian Ospald <hasufell@gentoo.org> metadata.xml:
  update metadata.xml, make me proxy-maintainer

  15 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Fix metadata.xml

  02 Apr 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.08.ebuild:
  Stable for ppc64, wrt bug #462890

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> -openconnect-3.11.ebuild,
  -openconnect-4.07-r2.ebuild, -openconnect-4.07-r3.ebuild,
  -openconnect-4.99.ebuild:
  Remove old

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.08.ebuild:
  Stable for amd64, wrt bug #457068

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.08.ebuild:
  Stable for x86, wrt bug #457068

*openconnect-4.08 (04 Mar 2013)

  04 Mar 2013; Markos Chandras <hwoarang@gentoo.org> +openconnect-4.08.ebuild:
  Upstream lacks math skills and for them 4.08 is greater than 4.99. Fixes bug
  #460098. Mask 4.99 until all the mess is sorted

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.99.ebuild:
  Stable for x86, wrt bug #457068

  26 Feb 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.99.ebuild:
  Stable for amd64, wrt bug #457068

*openconnect-4.99 (25 Feb 2013)

  25 Feb 2013; Agostino Sarubbo <ago@gentoo.org> +openconnect-4.99.ebuild:
  Version bump, wrt to bug #457068

  30 Jan 2013; Agostino Sarubbo <ago@gentoo.org> openconnect-4.07-r3.ebuild: