@@ -1,13 +1,13 @@
 DEFINED_PHASES=configure install postinst setup
-DEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( dev-libs/openssl[static-libs?] ) gnutls? ( || ( ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[nettle,static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[-nettle,static-libs?] dev-libs/libgcrypt[static-libs?] ) ) app-misc/ca-certificates ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) virtual/pkgconfig doc? ( || ( dev-lang/python:2.7[xml] dev-lang/python:2.6[xml] ) ) nls? ( sys-devel/gettext )
+DEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( || ( >=dev-libs/openssl-1.0.1f:0[static-libs?] ( >=dev-libs/openssl-1.0.1:0[static-libs?] <dev-libs/openssl-1.0.1d:0[static-libs?] ) <dev-libs/openssl-1.0.0k:0[static-libs?] ) ) gnutls? ( || ( ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[nettle,static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[-nettle,static-libs?] dev-libs/libgcrypt[static-libs?] ) ) app-misc/ca-certificates ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) virtual/pkgconfig doc? ( || ( dev-lang/python:2.7[xml] dev-lang/python:2.6[xml] ) ) nls? ( sys-devel/gettext )
 DESCRIPTION=Free client for Cisco AnyConnect SSL VPN software
 EAPI=5
 HOMEPAGE=http://www.infradead.org/openconnect.html
-IUSE=doc -gnutls libproxy nls static-libs linguas_ar linguas_as linguas_ast linguas_bg linguas_bg_BG linguas_bn linguas_bn_IN linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_en_US linguas_eo linguas_es linguas_es_CR linguas_es_MX linguas_et linguas_eu linguas_fa linguas_fi linguas_fr linguas_gd linguas_gl linguas_gu linguas_he linguas_hi linguas_hi_IN linguas_hu linguas_id linguas_it linguas_ja linguas_km linguas_kn linguas_ko linguas_ku linguas_lo linguas_lt linguas_lv linguas_ml linguas_mr linguas_ms linguas_nb linguas_nl linguas_nn linguas_no linguas_or linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_pt_PT linguas_ro linguas_ru linguas_sk linguas_sl linguas_sq linguas_sr linguas_sr@latin linguas_sv linguas_ta linguas_te linguas_tg linguas_th linguas_tl linguas_tr linguas_ug linguas_uk linguas_ur_PK linguas_vi linguas_vi_VN linguas_wa linguas_zh_CN linguas_zh_HK linguas_zh_TW
+IUSE=doc +gnutls libproxy nls static-libs linguas_ar linguas_as linguas_ast linguas_bg linguas_bg_BG linguas_bn linguas_bn_IN linguas_bs linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_en_GB linguas_en_US linguas_eo linguas_es linguas_es_CR linguas_es_MX linguas_et linguas_eu linguas_fa linguas_fi linguas_fr linguas_gd linguas_gl linguas_gu linguas_he linguas_hi linguas_hi_IN linguas_hu linguas_id linguas_it linguas_ja linguas_km linguas_kn linguas_ko linguas_ku linguas_lo linguas_lt linguas_lv linguas_ml linguas_mr linguas_ms linguas_nb linguas_nl linguas_nn linguas_no linguas_or linguas_pa linguas_pl linguas_pt linguas_pt_BR linguas_pt_PT linguas_ro linguas_ru linguas_sk linguas_sl linguas_sq linguas_sr linguas_sr@latin linguas_sv linguas_ta linguas_te linguas_tg linguas_th linguas_tl linguas_tr linguas_ug linguas_uk linguas_ur_PK linguas_vi linguas_vi_VN linguas_wa linguas_zh_CN linguas_zh_HK linguas_zh_TW
 KEYWORDS=~amd64 ~ppc64 ~x86
 LICENSE=LGPL-2.1
-RDEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( dev-libs/openssl[static-libs?] ) gnutls? ( || ( ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[nettle,static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[-nettle,static-libs?] dev-libs/libgcrypt[static-libs?] ) ) app-misc/ca-certificates ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) sys-apps/iproute2
+RDEPEND=dev-libs/libxml2 sys-libs/zlib !gnutls? ( || ( >=dev-libs/openssl-1.0.1f:0[static-libs?] ( >=dev-libs/openssl-1.0.1:0[static-libs?] <dev-libs/openssl-1.0.1d:0[static-libs?] ) <dev-libs/openssl-1.0.0k:0[static-libs?] ) ) gnutls? ( || ( ( >=net-libs/gnutls-3[static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[nettle,static-libs?] dev-libs/nettle ) ( =net-libs/gnutls-2.12*[-nettle,static-libs?] dev-libs/libgcrypt[static-libs?] ) ) app-misc/ca-certificates ) libproxy? ( net-libs/libproxy ) nls? ( virtual/libintl ) sys-apps/iproute2
 SLOT=0
 SRC_URI=ftp://ftp.infradead.org/pub/openconnect/openconnect-5.01.tar.gz http://dev.gentoo.org/~hwoarang/distfiles/openconnect-script-20121108205904.tar.gz
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	linux-info	dd8fdcccc30f117673b4cba4ed4f74a7	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	7ed4a8181d62a098eaa6c8eeacf190c9	python-utils-r1	9aa9cecaaf78644be7c0b8b8dc814dce	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=3bdb9667be0a7d961766721753c6e35b
+_md5_=a5544ceebe8ba57195c0259086bea106
