@@ -2,9 +2,9 @@ DEFINED_PHASES=install prepare
 DESCRIPTION=small utility to wait for an arbitrary process to exit
 EAPI=5
 HOMEPAGE=http://dev.gentoo.org/~zzam/wait_on_pid/
-KEYWORDS=~amd64 ~arm ~ppc ~x86
+KEYWORDS=amd64 ~arm ~ppc x86
 LICENSE=GPL-2
 SLOT=0
 SRC_URI=mirror://gentoo/wait_on_pid-0.0.2.tar.bz2 http://dev.gentoo.org/~zzam/wait_on_pid/wait_on_pid-0.0.2.tar.bz2
 _eclasses_=eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=e686fd824d3ded3b7f59250a2215faaf
+_md5_=acdf2b802a01763c45749dad7e5f11d6
