@@ -4,10 +4,10 @@ DESCRIPTION=Qt WebKit web browser
 EAPI=5
 HOMEPAGE=http://www.qupzilla.com/
 IUSE=dbus debug kde nonblockdialogs linguas_ca_ES linguas_cs_CZ linguas_de_DE linguas_el_GR linguas_es_ES linguas_es_VE linguas_fa_IR linguas_fr_FR linguas_hu_HU linguas_id_ID linguas_it_IT linguas_ja_JP linguas_ka_GE linguas_nl_NL linguas_pl_PL linguas_pt_BR linguas_pt_PT linguas_ro_RO linguas_ru_RU linguas_sk_SK linguas_sr_BA linguas_sr_RS linguas_sv_SE linguas_uk_UA linguas_zh_CN linguas_zh_TW
-KEYWORDS=amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-3
 RDEPEND=>=dev-qt/qtcore-4.7:4 >=dev-qt/qtgui-4.7:4 >=dev-qt/qtscript-4.7:4 >=dev-qt/qtsql-4.7:4 >=dev-qt/qtwebkit-4.7:4 dbus? ( >=dev-qt/qtdbus-4.7:4 )
 SLOT=0
 SRC_URI=http://www.qupzilla.com/uploads/QupZilla-1.4.3.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28	vcs-snapshot	3facff03591093044e38f21285a02129
-_md5_=3d418aff5f96cdf5897e745581a98ffc
+_md5_=05ec6aa2544514dfb9043250abfc9934
