@@ -9,17 +9,17 @@ DIST openconnect-4.08.tar.gz 1214464 SHA256 114eef2b5a8087f26c7871db8700a293101e
 DIST openconnect-5.01.tar.gz 1267809 SHA256 916f2a47c3e982f2ae6ed6a5063cf328589225a4216c95af3cbef278909e20d1 SHA512 466a0b2cde5d0f7cb26d9286b7eb0b8240c0f062bd9f338f0b0c008e39012f670c88b8ad0db15b24349782fc0c77cfe0f1a755537a3f93b838e0b95b46817026 WHIRLPOOL 64ca56678021ee14b1ef83da3b7ef7cfc7bba9af598affb4faf70a0463eaa7528ac181c9612950aae13a4d9a6eb10d1794d9faf914f9a06f41e771f161202333
 DIST openconnect-script-20121108205904.tar.gz 6380 SHA256 99fb6c72c13b5724766a952e392b75774771f220f59793e5d2576d7e3412555b SHA512 089650538f035875c205bed0190e44ed8176a138bbe2f635ac5335050c3b831fc85fbd61448ddaf7cb540c0a5d9b32f8f909e1fd5be188bfef07e721d4656545 WHIRLPOOL 3dc2b820afe49cc59c96d514f166d94fdbc3db9f3edbace69e41ae7e604263a834fff0a1fa7be806ff88c328a75de4306ec159e4022d43cd245addf34615efb2
 EBUILD openconnect-4.08.ebuild 4631 SHA256 954a982a73a652885f43a36366cdf67d5fd238bc3b4b339732c2ad120cce5877 SHA512 b422e91a1f21da26dad5f09b00145fc80a0f1463ab2601f538a255e2dca6e041c7a66cb28e04379bfa91bc96c8cc187a515b9c1694ca914abef8a287b32dc155 WHIRLPOOL 6c515d8e29c9933e39c8c42ef4733b55259a45218776b22d0ab621e7f1abc5c521f5fb5ddb1fde8d145b070d1e4cc872bfa6af27d9aff97f89dc1b168538a83a
-EBUILD openconnect-5.01.ebuild 4882 SHA256 5b58239bbba87bfaffc5b86719d091cb286bd78b60dd3ff1608e2dedadbc7dbc SHA512 ce8481889230617ebb65cedf654f2c62bd63d8ab5420377f1b1784fb8f5f636cee7b9e3e0b5e32e84afceca07730f72ea723618a6d1f5fdd3d1357da2f933ac2 WHIRLPOOL c12f99cd46032850782f45669305eaa2d1541ec83100b2e4263a705a85493c6ca2f92f79e0d4a6fc196ca548c18423110bb85c3c70d9e1d526285471b5848ea3
-MISC ChangeLog 3577 SHA256 f231c6df1748e1b659c61a0c48aa85a0e1385636c83255294eb6ee79ce651ed3 SHA512 4a1ca3f0530dee4e660fb3c4b1d3e8b925b39197ec23a948e262e8df9fa3614ec43ed0fc4dce1c684188a6f170e40643f2fe3a3b7c4871a55f7321f36f71508f WHIRLPOOL f079b3888e36dbf991cfff57b79b66c8958967575378c642d80d3dbf67ed0f1abc5dbf1595a1be301dd95104e0f01d86c858e21dea678e98f4490fb5ada9ac70
+EBUILD openconnect-5.01.ebuild 5053 SHA256 05c4bfd71df02d10d2801fbb9448d98022131523d2b12fa17e660385288171f5 SHA512 6e2aca1b73e5e961f3faa4aaaa90e8f93e7bfea933f2f64a97458423cebb9affa3742673b70aef8116ec25f3a6f41db16abf6857aca9fb6dd4e8d1bd8223f02b WHIRLPOOL 8472ae7b57be942bad684a289bb47569aaea56ef24f8e0831ee66056c3be912366e22909f4220138660e61cab04ae498a0ecaa5a355e682ca1cce5eb21fdf054
+MISC ChangeLog 3789 SHA256 c6125fe0c26bffba861c02a5c31cc77f1b79f81104b97d0dfbeccadab87307ed SHA512 a4a63ed8070c8c8e286b1a71c8c40cdecdd40334cb4986e207f8cd28b126657b6525254f4787d97e1e6d2e348b7c332e45e664d9af4cc963478237f5a149abb1 WHIRLPOOL e929b66e6ab26847bfa4f89971313147be19236c1cc34d12f4800217465724395d7911002dff710f597f953cb7244c96c464cb2afd3a4e4db892f1749a37748b
 MISC metadata.xml 562 SHA256 cb605257f9a771dc83098ad4fab43bb984e64a16d25b4a911d33729332590460 SHA512 64093ef8b5225cbbd7802dc27459a9f62db738b45292999c084f06f5f2e94b7bae5548454ecc7c8a4fafb4438b08ea57644686d9a1bccd6bb6a330ddc42a108c WHIRLPOOL 807437e32076bc1b8021fdcda1e98f204255bdc6d3f42f321d45614df29bee58e6febce77239784faa44d1cb24c5febc51b468faf5882babfaad0237b39033a6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRxu2QAAoJEFpvPKfnPDWzfeAH/3abokRdTElBvhMv6ekrQ9J7
-uP1nBH0LqBXcFazMMPvCKAk52kW7dsAU7obUA5OXPDpOC6psqkEwzecpEiPh6rMo
-v3IQnlZmk4MZ89JKVm3blfiL3dxN/8pGKWBCLshZAgnQQe1HPHqW3N47tm6vvF6m
-rzVFnfdNiqKvmgoc8miRqkRWUGwLKX0sAKsD0IJ9uwm//99uhv1UY4S3DJGFcSbS
-I2JEGHWgCel2sZIgJnrvg4bpSqVxMzSlglZnwpuyMTM3LFYmTXPDO57tQoC0jVSU
-2O9ymH94sJ2AlTGIIzbEiE/KFOw4hEDFpYrrIpKsePceXzDUrw6AiNyioydARfE=
-=sDDw
+iQEcBAEBCAAGBQJRzkh9AAoJEJ0WA1zPCt1hQHQIAIbGS52tjQiGJxAhc9gW9Pk3
+RrDVITJh1Tn7TC49KuPaS7vrJkyEz6YNa21AvfUUpJOeo06TtTa56Gk9W6FzxhsQ
+LRz3OLLxTRG48A9jluQ6p2R+Z9eqNp2cFkDnutVyDfyr3Ol8UZ1dnGCsbEzz7Ut5
++QTWBMdPExgAgZd5YlpVdRa5Zmq+72xICS0/x/NSqQ8qqPivs1HGLPiozi5yYSnf
+636MdQeyMfGqFVxTluCvyCbDjiesFlXNFRcGAP3SUq1FKRNNxhFfx9vrykOvkzQc
+xHyLFQ7CYsI+Vo8TBJbSekuw49qYohnm0WZoEG+r97NLpz5KXr2ovEO1X+33w6o=
+=H0dl
 -----END PGP SIGNATURE-----
