@@ -4,13 +4,17 @@ Hash: SHA256
 DIST wait_on_pid-0.0.1.tar.bz2 7119 SHA256 78955fb0ac9ca123185d9a5df438dc23a36915c9d07951e7bb957d593907dea0 SHA512 023ed990f60dbfafcf2e8fe1da0bd234afeea59d9d71ce43019764398498bc6e07f7d04ab8a30495302b60b65265cc99542d7ea3edf300407d41993f647e0206 WHIRLPOOL bf4e9a13f595018524aa8b4412227eda6b6bf256ceee93cde6c99c34e1c268a8a7e14c0e5ddb55a5535957c11374258a38cabd9050d0927329bc399877dea071
 DIST wait_on_pid-0.0.2.tar.bz2 7139 SHA256 5bb33865c294378f3217facc183c0284dd6bd81e475fff715f03eeb5d47e40f8 SHA512 22e3481736b90b1b3152dc5c07e766892d42de199669909752fcbcfcd94ec9c3a143d1474c9533cf3494931e19e4ab63f7f4dcef7fffe7e2ac3d803c22852e72 WHIRLPOOL 240d263148009e447a522bf4bf53b2dd5e62e14f5a2827091627b4435cdec56c2720032bb0b0f8e2f2031366921d37989149ba77ccfbb052c364ce69ac73e7e6
 EBUILD wait_on_pid-0.0.1.ebuild 635 SHA256 da2ea1c019c4415248b7f9e36efed52f71b29253ea5feebe8adb3d4c99b50dbf SHA512 d6202a71a6f351713e63a99ccc56c1db8f5c601dad357befcb8cee3af8b82b030208f8efb4a07b58b70c2dd4b55560c611243b8122e34c8189bf810711a1b0c1 WHIRLPOOL a5dace5dff6e205c18ef567f77d9865ed80d6b64c00e9bac9072264e3ed23f456a305eb905d3beecc1001bbf27e28e896869e05d057b946049e4de69c310fa5d
-EBUILD wait_on_pid-0.0.2.ebuild 661 SHA256 eb5b10eaff4416bc568055653c9ad878a8c061f9d8df979119161b3dd9f49918 SHA512 1b7646213ed05d7e8179187bf4431a5c4618ce912aac4073141544a715a827a00335726bdcfa289103a56ccbd8406e862975ea5a8b6bb5e3eddbceaa413b3d12 WHIRLPOOL 63b7c6990de52e1992d87054795fc9d19401bc15acb3d6d29c30e9882ddb3e5ac07f53736780ead1f71e9457038f42193d6a5874405be832040c8d09c102dd88
-MISC ChangeLog 1238 SHA256 527d2ca0ef17f23f8dea4247e29508edb8d6f3a1b0e71795e0ba59866221bc87 SHA512 a21429ef26e91cf5b68e3fba45ccfd1ec8e512d033163373e36841c700019abc5fa32ffe2ad437bdc9b95a7557bb1b7b18e84710430fd757dbd9fd50c575a64f WHIRLPOOL e217aab225564bbc878002c9d9740a3931522ad4afe16380b83bea67d87611231289fcf2adedbf843e7290a3bb20535dadd2151311a9c325a3192b4626f6dcb0
+EBUILD wait_on_pid-0.0.2.ebuild 663 SHA256 cd63f5f027eb0aa66921e744c1410bdc74188f91be9d5b45ed9765a7cbc693d4 SHA512 1f5075397f9b4b68534e11ab778376602a1a6e0f894d7112195550f3c11d21f629c198925f3613ba19195b659e0d4fa1ebcde883bb7d316be2628c6ea5d981f4 WHIRLPOOL 650e42e3a0f384585f2899a04c256d49fa234217347630a6494cd90c1a79c9d01ef8995e0be5db713ae0f3611b882ce557a231fc64cc564bd7b59ac81d283d45
+MISC ChangeLog 1363 SHA256 eeb86c151251fed789755de1e7e4a3e256f8a338e9b5ebe5ba783ff24e6727a8 SHA512 c081ea17c3ae114f4531e357a2fd6561e7cc5854ae80bda3311d560562f5384063b179d3bfd8ed5e53ac5fb83d7ba5731cbd50d9ce2208658e8573d4dab5e432 WHIRLPOOL 5a3caf1c66fdc1fe5ed9ff87e361d37c841590a228a86ea9986f05315dd2a8f126f40ffccb0c3b837cde633cac9b8f53640a262087f0cc43fe65adab2794d3c4
 MISC metadata.xml 234 SHA256 80d9b5076ebe98f5cede14b9ce39b51c3791b808442f4bc56392d4f7b98bbf39 SHA512 e35d24db48018ce87aacf7c6611c2471b26d5cfff97c2179b766ffac4b1186e2ed86702bcb4365cd5786d163cfd9a315d0ede155f09c084494ce941d1635395e WHIRLPOOL 49d5010eafda384ed176275958b3d8cda4bc70ac8d743e9e3d1e13aff12344d800e531e809cfd1c0654f5c7903dce86749010536dad8c83667541480619a6b90
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlHN2xUACgkQt2vP6XvVdOdhtgCgnBIqC9XfuAhMINmeFIVFH7Sk
-sjkAoNSy/U7fSTYeXHdFImW0xcn1b6/D
-=0uLj
+iQEcBAEBCAAGBQJRzkOGAAoJECo/aRed9267cfYH/jLF7Hq8VUmIPPM1q+vT4ja/
+Md77rUDEPHJGq8OSxDv5Rfks31/j5vlnINNF0YVhYRrqgCl+uTDPDFg4gkwEGLB7
+i6O7H2am8XUbZp2sS4gAdRHUK+q5tUoaHZR4wnCvVSoq3Idv2tbNkJ10I1c7ZEoX
+hzsm+c+nBuJD8wycDAIePji+zuZPK61zkDZVKNvE7Bs29XH9hBTHafYZkazLUNHN
+A2W1p97W/mUHiS18XwcWT0PenHOiLDdXtZK+Z5P72i3Eca1PicwrK9hevn9CnUy7
+dasyHE+V8OBdWRZX3CK/dSc3qIXr5yy4N9opx0egb78QNfXvmkqJjP8zvTgBRyE=
+=CHra
 -----END PGP SIGNATURE-----
