@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX qupzilla-1.3.5-fixes.patch 3088 SHA256 af2051355a830d11c7ae7e265100a98642e55ed4aade5e0c29b9efacd9525fb3 SHA512 6ec95bc71d793013744b5efb25caf4f15fc3adfda31764d01b54e4a04b0da640f47dc102aba55d80a6f820881dd3c2a9e30ab2eb1e103a16af1c9a066f96d441 WHIRLPOOL b4eb57a7488e809d064ff42acf682e32c4e663310a7f1d446c29e74f53fdb068d2108579bb9dad608835501709fa66dda09adf7a6ca3746f65cef5884af84d31
 AUX qupzilla-1.3.5-libX11-underlinking.patch 576 SHA256 b8e4b4c9e454db17a98dcba7d642dd47e2dfd6d788395468fa0f3a3d7fc709e5 SHA512 502ec7b82113a3e358f8ffb49906e5d8bd8fe67c399f050af4896ae6e665b87b5602f01cee2b9c6e84ab5661e2e92c8abca3131688eba3e28f1e5d61adf5a5d2 WHIRLPOOL 4b2a878ff334bc8ba8e8a4774130d6ad02cf442b38294df73398e76bc3f1350e7a6fe6e3b9089de413b478301586c415995d2138b19d49de831964f40e6b0e23
@@ -8,23 +8,15 @@ DIST QupZilla-1.4.1.tar.gz 3948318 SHA256 9aa6ee14b025dcc2b1ed9bfed4cc340c222ee1
 DIST QupZilla-1.4.3.tar.gz 3947912 SHA256 cf48574d981b912bb1b25e6a2370c8d0eea73baf8770f437b64e3d9d06a67b2a SHA512 8d586f7cd161c91a506e3634a279cbce7df1bd94720d019f228f0eb3f0edced6997d36ad8327e6e51d5231306748da8492b67a1ecc26340f680bd68259fad096 WHIRLPOOL 79481502dacc682e962f80c65458a5af76b1bedbe60403e8cef305e58d3148054dfc2834b9cc905d169782f2ae8c9683df0c41fd3c19b131b544050d2c69b222
 EBUILD qupzilla-1.3.5-r1.ebuild 1755 SHA256 310f564cf6bb1757107d8f751d4ca9648be10a1bebcccb6dc8af508d4b2b4375 SHA512 2e0756e89a825106437eb46837a279e98919d2ba0a0e754064349cc20d43fbee7befffc4452f994b8f594e4cf6345a0d642ff990977641ace124d6020ef69739 WHIRLPOOL 154100e9b2c501e45d334ba894cc4a04a00aa3e3d300c1b85c29edfefe14fdd7dc114fd670cd4a1a529f342adb7a309c73f581644fc11aec5898f695a74d3269
 EBUILD qupzilla-1.4.1.ebuild 1657 SHA256 ab2c2180415076875e0e2c434cbe03f77ae7d89f45c1fdd1974735d934ef9dd9 SHA512 806d931c5011aeed4c811ab5d1b985c5fd67b05148409c1a07edffd13ab15e9cdae77be72d8a420795fab7959d2fc6e3316779eff11abd46b2cb402b7b7cdbe1 WHIRLPOOL 6b79929f112ea6570d503b0fa16c2547e7b8318b943a4e6f4c9de9c9d33d337403033ce2c8ba1911f0ef22f383fa26943304327e3781dbe60db5057ff84976da
-EBUILD qupzilla-1.4.3.ebuild 1658 SHA256 f3af94197eceeb492feaaefe233d60e767ab189a23d087a1da915d07973e079f SHA512 6730dddb278da44d2a80178234f33c68f285768e5559f9ace4c2b093b9725e95f7873f8b0fb85570dec6c668fa254e018abb541199f27f85c1eb1c35a42ab451 WHIRLPOOL e080f1889c2e01afe288b899cfcffc622f4630e751f7051f0f11f1daf06305bb2e070b6b19e56e02cd9a79a5d5b0d897b1e7596668860397e161f222ea4914ec
-MISC ChangeLog 4191 SHA256 affaaf9c4a5bb6c0c4cb99d37e051cf46b107dbde07e3c86acaa97db6e596f6e SHA512 5ab1e51e3a70e22ca1b98160a9072859f01476029a7729af6b3842a9c64a1eabedaa5df780d978bde9259e3c9feca78ba357edbf9a61091ae0db4c98df600731 WHIRLPOOL 1e962b2903146b3dc2f878a5c682faebd286c898bd1c8027d07dc57f5df002eaadf0996c5204430ac380acd4ca0a439198a21d6db2ca06b3bce80248fd175534
+EBUILD qupzilla-1.4.3.ebuild 1661 SHA256 0285368cb302ad6c95c8d01cacb272858b9af81f1d6ed52bd965ef0e40c03e40 SHA512 75bc0fb4a7c8518f6f06634145e798d5b0fb7edd43dfc47f6632140a7653939bcc5a7b42df1569e8ebc7b33096fce978aace7e625b9419abc2f7910d8d91a15c WHIRLPOOL 83554d16e10c438f2a1dbe0f7e45e5923c4a55ce909c7800b80576a9a649134cffeb1804b06e4a7099906e0a1dc9eb110e78b6e1bc7583f339a14f4ac5afcf6e
+MISC ChangeLog 4298 SHA256 3ed4c7201778cd61a84cc718049681f626e6c06a8fdcd0f8ed053e78edc39c46 SHA512 8e68a3018f3aaf32d884ac20533ddc717c9dcce195c4b46105a0fa781c55b500c37609cdac554fa6dd3b4a74e4247bb0ee461df579ee85ca6f6f9e76afc552c0 WHIRLPOOL 46184ef0cca4f4ed675105b0091e9fdbed0c01fa48aec7c15ede76aaab54fc749bd37dc3371ba3ac659a9c2a75bac7a688285e612d96e3254b4130b6d3c83d8e
 MISC metadata.xml 416 SHA256 1b51452eaf560d3cd580b3530bb739a415a34188f5ba555d2af9d36da646fe0b SHA512 4918aafacd22beb0817572692c198c99fb588c226abc469fc9a01c02ddcd685584bc756bc595a936f3e48c535f2203e2384f8dd6d96bffe5ad152f84c7812e56 WHIRLPOOL 17d97783743b7140be444e359e62da877ba30134b8abb83912c8f5633c9a5e94981d9db2a062f03467b4fb89b7ca6ef2d755e359a56d9c31dc26eae2eb7ccd1c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRzfemAAoJELp701BxlEWfTMkP/1LCh2odVS5gYfmMSYx30lm3
-WkTSgnzFUcGsnqBJJ/VvrAhtI+oV61ZNW5woPF1KbWK4ZXh3o+IVQGb8lQZ1E0Za
-g6pLbs9uGWKdBUAHSSO+t0Tdnma6lMJMBpCD09jtTQxRYEhk5BFhMAUODdHi482J
-UiSrA/Zvy8nWNH7NjM8WBgHb7BRYEEqcUtYfzO+dzkfIgQECcuLOK6yl1bkcpUIy
-FPhDOjI0dgPQz26IKBNsMwGNWHHPPb/Wb1nzHxN9a0wvdWRiJpoTVK2hDSR2IVmn
-ncdusCSvwwAT/W/p+9LsKB/D4gsiHdNT2tl0lS0XoOkkMynHgkfnsJRbd1KW9PLF
-pcushi6x2CgiyaQeLdNkzhnt3xrGKTyFnS9mtxv7oK6FjNgdPJ5QBmQP1PcZZjgb
-74mueepH2B2tEEmS8TLLbaxog5iNVcolQfGvyD1dDfBc6gDL3ZObpJOPDzRBgZvL
-MyivFvbDcnngznSl95BWi2cb/L+lLu4DP3/rNh9vnjFL1liv8buqusDDfV8kaMEj
-ufGPIqgrzwoclcUTibgB2UUqfkOs6JlzNTCfUGWZDiX+ewXHfpgdSjtvAw4oPvts
-ESAPL+pX8SVQeensuKX4dUFUadQmeipSDDHlYg2b0fNrQCENCX1J0SzWFAupt1qz
-GQWXPvRmRRfZuM0mJpkf
-=U0yR
+iJwEAQEIAAYFAlHOM1UACgkQG9wOWsQutdYLFQP+Ocm/AdAyf6d16ZstECMBqWsJ
+HTHtFh06oM3JCMsRAxxSPXSADEn1Gxid1/QxQhc8j7/NvfzGqbJxJcsif8HXXqI2
+U66KXVzxhdCzoCJ0zN9MTf7qcgYyWthtG2h8g3O6yb/xAHiC65vjQWMiwCVfL1Rt
+9p/SE9DzwxSfpSWxfO0=
+=o2rj
 -----END PGP SIGNATURE-----
