@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/wait_on_pid
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/wait_on_pid/ChangeLog,v 1.9 2013/06/28 18:51:01 zzam Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/wait_on_pid/ChangeLog,v 1.10 2013/06/29 02:16:31 pinkbyte Exp $
+
+  29 Jun 2013; Sergey Popov <pinkbyte@gentoo.org> wait_on_pid-0.0.2.ebuild:
+  Stable on amd64 and x86, wrt bug #474318
 
   28 Jun 2013; Matthias Schwarzott <zzam@gentoo.org> wait_on_pid-0.0.2.ebuild:
   Changed download location back to original
