@@ -1,6 +1,9 @@
 # ChangeLog for www-client/qupzilla
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/qupzilla/ChangeLog,v 1.29 2013/06/28 20:52:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/qupzilla/ChangeLog,v 1.30 2013/06/29 00:46:31 zlogene Exp $
+
+  29 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> qupzilla-1.4.3.ebuild:
+  x86 stable wrt bug #475094
 
   28 Jun 2013; Agostino Sarubbo <ago@gentoo.org> qupzilla-1.4.3.ebuild:
   Stable for amd64, wrt bug #475094
